dataset1235/2025-2/2868285114/users/2107547248/executions/3071719669_2086141900.log
== SUBMISSION (2025-08-28 22:30:59)
-- CODE: 
from math import *

# faça seu código aqui!
lado=int(input())
apo = lado/(2 *tan(pi/11))
area = (11*lado*area)/2
print(round(area,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = (11*lado*area)/2
                    ^^^^
NameError: name 'area' is not defined
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = (11*lado*area)/2
                    ^^^^
NameError: name 'area' is not defined
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = (11*lado*area)/2
                    ^^^^
NameError: name 'area' is not defined
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = (11*lado*area)/2
                    ^^^^
NameError: name 'area' is not defined
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = (11*lado*area)/2
                    ^^^^
NameError: name 'area' is not defined
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = (11*lado*area)/2
                    ^^^^
NameError: name 'area' is not defined
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-28 22:33:49)
-- CODE: 
import math

# faça seu código aqui!
lado=float(input())
apo = lado/(2 *math.tan(math.pi/11))
area = (11/2)*lado*apo
print(round(area,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
5
---- correct output:
234.14
---- user output:
234.14
-- TEST CASE 2:
---- input:
4
---- correct output:
149.85
---- user output:
149.85
-- TEST CASE 3:
---- input:
6
---- correct output:
337.16
---- user output:
337.16
-- TEST CASE 4:
---- input:
2
---- correct output:
37.46
---- user output:
37.46
-- TEST CASE 5:
---- input:
7
---- correct output:
458.92
---- user output:
458.92
-- TEST CASE 6:
---- input:
3
---- correct output:
84.29
---- user output:
84.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
